test/expected/explain_ai-c++11.out
explain auto int x
             ^
14: error: declaration expected
